syntax = "proto3";
package jim380.re.fix;

option go_package = "github.com/jim380/Re/x/fix/types";

import "jim380/re/fix/standard_message.proto";

message TradeCapture {
  string sessionID = 1;
  TradeCaptureReport tradeCaptureReport = 2;
  TradeCaptureReportAcknowledgement tradeCaptureReportAcknowledgement = 3;
  TradeCaptureReportRejection tradeCaptureReportRejection = 4;
}

// Trade Capture Report with fields, tags and descriptions.
message TradeCaptureReport {
  // Standard FIX message header.
  Header header = 1;

  // (571) Unique identifier for the trade report.
  string tradeReportID = 2;

  // (487) Type of trade report (new, cancel, correction).
  string tradeReportTransType = 3;

  // (856) Type of trade report (real-time, end-of-day).
  string tradeReportType = 4;

  // Trade details
  // (828) Type of the trade (Block Trade, Exchange for Physical).
  string trdType = 5;

  // (829) Further information about the trade type.
  string trdSubType = 6;

  // (54) Buy or sell.
  string side = 7;

  // (38) Quantity of the order involved in the trade.
  string orderQty = 8;

  // (32) Quantity of the last execution in the trade.
  string lastQty = 9;

  // (31) Price of the last execution in the trade.
  string lastPx = 10;

  // (381) Total amount of the trade, including any commissions and fees.
  string grossTradeAmt = 11;

  // Trade identifiers
  // (17) Identifier for the execution of the trade.
  string execID = 12;

  // (37) Identifier for the order associated with the trade.
  string orderID = 13;

  // (1003) Unique identifier for the trade.
  string tradeID = 14;

  // (1126) Identifier for the original trade, in the case of a trade
  // correction.
  string origTradeID = 15;

  // Instrument details
  // (55) Symbol or code for the financial instrument traded.
  string symbol = 16;

  // (48) Identifier for the security traded.
  string securityID = 17;

  // (22) Source of the security identifier.
  string securityIDSource = 18;

  // Trade dates and settlement
  // (75) Date of the trade.
  string tradeDate = 19;

  // (60) Time at which the trade occurred.
  string transactTime = 20;

  // (63) Settlement type of the trade.
  string settlType = 21;

  // (64) Settlement date of the trade.
  string settlDate = 22;

  // Standard FIX message trailer.
  Trailer trailer = 23;
}

// Trade Capture Report Acknowledgement with fields, tags and descriptions.
message TradeCaptureReportAcknowledgement {
  // Standard FIX message header.
  Header header = 1;

  // Trade report details
  // (571) Identifier for the trade report being acknowledged.
  string tradeReportID = 2;

  //(1003) Unique identifier for the trade.
  string tradeID = 3;

  // (1040) Alternative identifier for the trade.
  string secondaryTradeID = 4;

  // (856) Type of trade report (real-time, end-of-day).
  string tradeReportType = 5;

  // (828) Type of the trade (Block Trade, Exchange for Physical).
  string trdType = 6;

  // (829) Further information about the trade type.
  string trdSubType = 7;

  // (150) Status of the trade report (new, cancelled, corrected, etc.).
  string execType = 8;

  // (572) Identifier for the previous trade report being referred to.
  string tradeReportRefID = 9;

  // (818) Alternative identifier for the trade report.
  string secondaryTradeReportID = 10;

  // (939) Status of the trade report (accepted, rejected, etc.).
  string tradeReportStatus = 11;

  // (487) Type of trade transaction (new, cancel, correction).
  string tradeTransType = 12;

  // (751) Reason why the trade report was rejected.
  int64 tradeReportRejectReason = 13;

  // Additional information
  // (58) Additional information about the trade report or acknowledgement.
  string text = 14;

  // Standard FIX message trailer.
  Trailer trailer = 15;
}

// Trade Capture Report Rejection with fields, tags and descriptions.
message TradeCaptureReportRejection {
  // Standard FIX message header.
  Header header = 1;

  // (571) The identifier for the trade report being rejected.
  string tradeReportID = 2;

  // (751) A code indicating why the trade report was rejected.
  int64 tradeReportRejectReason = 3;

  // (754) The identifier of the previous message (e.g., Trade Capture Report)
  // to which this message refers.
  string tradeReportRejectRefID = 4;

  // (58) A description of the reason for the trade report rejection.
  string text = 5;

  // Standard FIX message trailer.
  Trailer trailer = 6;
}
